fix: fixed typo

--- a/priority/experiment/create_data_sets/04_upload_to_huggingface.ipynb
+++ b/priority/experiment/create_data_sets/04_upload_to_huggingface.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,33 +55,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>autolog out after some time frame is your feat...</td>\n",
+       "      <td>zindex issue using classic blockselecting a li...</td>\n",
        "      <td>0</td>\n",
-       "      <td>high_priority</td>\n",
+       "      <td>low_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>image picker for sourceimplement an android im...</td>\n",
+       "      <td>indicate the language of a code blocktell us a...</td>\n",
        "      <td>0</td>\n",
-       "      <td>high_priority</td>\n",
+       "      <td>low_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>fix video page listitem hovering behaviour whe...</td>\n",
+       "      <td>use one attribute name for header title namema...</td>\n",
        "      <td>0</td>\n",
-       "      <td>high_priority</td>\n",
+       "      <td>low_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>escape shuttle reaches ludicrous speed descrip...</td>\n",
+       "      <td>document levels of validation in vldtermas thi...</td>\n",
        "      <td>0</td>\n",
-       "      <td>high_priority</td>\n",
+       "      <td>low_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>binder doesnt load notebooks outside of the un...</td>\n",
+       "      <td>support puml files in boilerplatessee this com...</td>\n",
        "      <td>0</td>\n",
-       "      <td>high_priority</td>\n",
+       "      <td>low_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -90,77 +90,77 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>419837</th>\n",
-       "      <td>include motd feature in ci testscurrent messag...</td>\n",
+       "      <th>245108</th>\n",
+       "      <td>monitoring allow the user to define abnormal s...</td>\n",
        "      <td>1</td>\n",
-       "      <td>medium_and_low_priority</td>\n",
+       "      <td>not_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>419838</th>\n",
-       "      <td>checkbox to disable tweeting displayed for non...</td>\n",
+       "      <th>245109</th>\n",
+       "      <td>run binbash dockerentrypointsh smw step is fai...</td>\n",
        "      <td>1</td>\n",
-       "      <td>medium_and_low_priority</td>\n",
+       "      <td>not_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>419839</th>\n",
-       "      <td>add additional labels to service monitorsis yo...</td>\n",
+       "      <th>245110</th>\n",
+       "      <td>null links on grscicoll pagination in other la...</td>\n",
        "      <td>1</td>\n",
-       "      <td>medium_and_low_priority</td>\n",
+       "      <td>not_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>419840</th>\n",
-       "      <td>no mic button in the keyboard for hvr build co...</td>\n",
+       "      <th>245111</th>\n",
+       "      <td>todo migrate to strapi or wordpress idkim on t...</td>\n",
        "      <td>1</td>\n",
-       "      <td>medium_and_low_priority</td>\n",
+       "      <td>not_priority</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>419841</th>\n",
-       "      <td>rpmem errno is not set when passing invalid le...</td>\n",
+       "      <th>245112</th>\n",
+       "      <td>found a bug20190608t002920032zim having a prob...</td>\n",
        "      <td>1</td>\n",
-       "      <td>medium_and_low_priority</td>\n",
+       "      <td>not_priority</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>419842 rows × 3 columns</p>\n",
+       "<p>245113 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                               text_clean  labels  \\\n",
-       "0       autolog out after some time frame is your feat...       0   \n",
-       "1       image picker for sourceimplement an android im...       0   \n",
-       "2       fix video page listitem hovering behaviour whe...       0   \n",
-       "3       escape shuttle reaches ludicrous speed descrip...       0   \n",
-       "4       binder doesnt load notebooks outside of the un...       0   \n",
+       "0       zindex issue using classic blockselecting a li...       0   \n",
+       "1       indicate the language of a code blocktell us a...       0   \n",
+       "2       use one attribute name for header title namema...       0   \n",
+       "3       document levels of validation in vldtermas thi...       0   \n",
+       "4       support puml files in boilerplatessee this com...       0   \n",
        "...                                                   ...     ...   \n",
-       "419837  include motd feature in ci testscurrent messag...       1   \n",
-       "419838  checkbox to disable tweeting displayed for non...       1   \n",
-       "419839  add additional labels to service monitorsis yo...       1   \n",
-       "419840  no mic button in the keyboard for hvr build co...       1   \n",
-       "419841  rpmem errno is not set when passing invalid le...       1   \n",
+       "245108  monitoring allow the user to define abnormal s...       1   \n",
+       "245109  run binbash dockerentrypointsh smw step is fai...       1   \n",
+       "245110  null links on grscicoll pagination in other la...       1   \n",
+       "245111  todo migrate to strapi or wordpress idkim on t...       1   \n",
+       "245112  found a bug20190608t002920032zim having a prob...       1   \n",
        "\n",
-       "                          class  \n",
-       "0                 high_priority  \n",
-       "1                 high_priority  \n",
-       "2                 high_priority  \n",
-       "3                 high_priority  \n",
-       "4                 high_priority  \n",
-       "...                         ...  \n",
-       "419837  medium_and_low_priority  \n",
-       "419838  medium_and_low_priority  \n",
-       "419839  medium_and_low_priority  \n",
-       "419840  medium_and_low_priority  \n",
-       "419841  medium_and_low_priority  \n",
+       "               class  \n",
+       "0       low_priority  \n",
+       "1       low_priority  \n",
+       "2       low_priority  \n",
+       "3       low_priority  \n",
+       "4       low_priority  \n",
+       "...              ...  \n",
+       "245108  not_priority  \n",
+       "245109  not_priority  \n",
+       "245110  not_priority  \n",
+       "245111  not_priority  \n",
+       "245112  not_priority  \n",
        "\n",
-       "[419842 rows x 3 columns]"
+       "[245113 rows x 3 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "name = \"high_vs_med_and_low_priority\"\n",
+    "name = \"low_vs_random\"\n",
     "file_name = f\"csv/clean_{name}.csv\"\n",
     "df = pd.read_csv(file_name)\n",
     "df"
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -201,25 +201,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>high_priority</th>\n",
-       "      <td>210100</td>\n",
+       "      <th>low_priority</th>\n",
+       "      <td>126285</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>medium_and_low_priority</th>\n",
-       "      <td>209742</td>\n",
+       "      <th>not_priority</th>\n",
+       "      <td>118828</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          count\n",
-       "class                          \n",
-       "high_priority            210100\n",
-       "medium_and_low_priority  209742"
+       "               count\n",
+       "class               \n",
+       "low_priority  126285\n",
+       "not_priority  118828"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -280,20 +280,20 @@
        "DatasetDict({\n",
        "    test: Dataset({\n",
        "        features: ['text_clean', 'labels', 'class', '__index_level_0__'],\n",
-       "        num_rows: 41985\n",
+       "        num_rows: 24512\n",
        "    })\n",
        "    train: Dataset({\n",
        "        features: ['text_clean', 'labels', 'class', '__index_level_0__'],\n",
-       "        num_rows: 335873\n",
+       "        num_rows: 196090\n",
        "    })\n",
        "    validate: Dataset({\n",
        "        features: ['text_clean', 'labels', 'class', '__index_level_0__'],\n",
-       "        num_rows: 41984\n",
+       "        num_rows: 24511\n",
        "    })\n",
        "})"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,13 +325,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7eb1056f140f4bac9a15bec8d37a7ae0",
+       "model_id": "acbfea3bb35641589cba8fa388eb665e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -345,12 +345,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "365d39f2926f49f282e12bae29cbc108",
+       "model_id": "cb74039410114554896a86614b950b12",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/42 [00:00<?, ?ba/s]"
+       "Creating parquet from Arrow format:   0%|          | 0/25 [00:00<?, ?ba/s]"
       ]
      },
      "metadata": {},
@@ -359,7 +359,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04153decd45d40739abdd88a710600c0",
+       "model_id": "f24dad682b9a43aa824f7f38ae6129a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -373,12 +373,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e43af2c738c41d8a95e951cc830b39f",
+       "model_id": "721b1d7aa9f449ff84a4d6602207abbc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/336 [00:00<?, ?ba/s]"
+       "Creating parquet from Arrow format:   0%|          | 0/197 [00:00<?, ?ba/s]"
       ]
      },
      "metadata": {},
@@ -387,7 +387,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d87c9c6151854626a53915e200c74a4c",
+       "model_id": "10f7386faf384842941a9ecb8eca80f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -401,12 +401,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4483af0b1314ea8b54c6c50e6f3ce58",
+       "model_id": "782450e2252b4372b3c6b0e1122252fe",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/42 [00:00<?, ?ba/s]"
+       "Creating parquet from Arrow format:   0%|          | 0/25 [00:00<?, ?ba/s]"
       ]
      },
      "metadata": {},
