--- a/priority/experiment/high_vs_med_and_low_v2/05_bert_priority_training.ipynb
+++ b/priority/experiment/high_vs_med_and_low_v2/05_bert_priority_training.ipynb
@@ -210,7 +210,7 @@
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "#model.to(device)\n",
+    "model.to(device)\n",
     "device"
    ]
   },
