feat: done training high vs random issues 20 percent

--- a/priority/min_lenght_issues/high_vs_random_issues_v3/05_training_min_lenght_1000.ipynb
+++ b/priority/min_lenght_issues/high_vs_random_issues_v3/05_training_min_lenght_1000.ipynb
@@ -930,7 +930,9 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "5970cfc5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1275,7 +1277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
