feat: prepped high vs random min len 100 and 1000

--- a/priority/min_lenght_issues/create_data_sets/04_upload_to_huggingface.ipynb
+++ b/priority/min_lenght_issues/create_data_sets/04_upload_to_huggingface.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -56,32 +56,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>valueerror too many values to unpack during st...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>simplepasscodebuttons not working on ios 1131 ...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>provide details on how to proceed with setting...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>pedroborgeskirbymetatagsv210 2 vulnerabilities...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>cve201812896 medium detected in linuxlinux46 a...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>when i use thrift protocol the classes generat...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>incorrect recoloring of the background color o...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>the tiled gallerys visible columns in the edit...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>csw data source australianinstituteofmarinesci...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>core chinese characters not displaying in work...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -90,64 +90,64 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>158938</th>\n",
-       "      <td>158938</td>\n",
-       "      <td>support passing of idictionarystring object as...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>158939</th>\n",
-       "      <td>158939</td>\n",
-       "      <td>editor overflow menu not shown on api17 expect...</td>\n",
+       "      <th>76415</th>\n",
+       "      <td>76415</td>\n",
+       "      <td>bug sidebar statistics fail to load in appon f...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>158940</th>\n",
-       "      <td>158940</td>\n",
-       "      <td>client message cant detect virtualbox because ...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>158941</th>\n",
-       "      <td>158941</td>\n",
-       "      <td>feature gate story why do we need the feature ...</td>\n",
+       "      <th>76416</th>\n",
+       "      <td>76416</td>\n",
+       "      <td>ena consensus submissions x instituteenaassemb...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>158942</th>\n",
-       "      <td>158942</td>\n",
-       "      <td>genotype selectorfor those case that we have m...</td>\n",
+       "      <th>76417</th>\n",
+       "      <td>76417</td>\n",
+       "      <td>nearestneighbor upsampling regression  bug whe...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76418</th>\n",
+       "      <td>76418</td>\n",
+       "      <td>cve202122880 high detected in rails523gem acti...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76419</th>\n",
+       "      <td>76419</td>\n",
+       "      <td>failure to save node doing 8021x autoreg jun 2...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>158943 rows × 3 columns</p>\n",
+       "<p>76420 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Unnamed: 0                                         text_clean  label\n",
-       "0                0  valueerror too many values to unpack during st...      0\n",
-       "1                1  provide details on how to proceed with setting...      0\n",
-       "2                2  cve201812896 medium detected in linuxlinux46 a...      1\n",
-       "3                3  incorrect recoloring of the background color o...      1\n",
-       "4                4  csw data source australianinstituteofmarinesci...      0\n",
-       "...            ...                                                ...    ...\n",
-       "158938      158938  support passing of idictionarystring object as...      1\n",
-       "158939      158939  editor overflow menu not shown on api17 expect...      0\n",
-       "158940      158940  client message cant detect virtualbox because ...      1\n",
-       "158941      158941  feature gate story why do we need the feature ...      0\n",
-       "158942      158942  genotype selectorfor those case that we have m...      0\n",
+       "       Unnamed: 0                                         text_clean  label\n",
+       "0               0  simplepasscodebuttons not working on ios 1131 ...      1\n",
+       "1               1  pedroborgeskirbymetatagsv210 2 vulnerabilities...      1\n",
+       "2               2  when i use thrift protocol the classes generat...      0\n",
+       "3               3  the tiled gallerys visible columns in the edit...      0\n",
+       "4               4  core chinese characters not displaying in work...      1\n",
+       "...           ...                                                ...    ...\n",
+       "76415       76415  bug sidebar statistics fail to load in appon f...      0\n",
+       "76416       76416  ena consensus submissions x instituteenaassemb...      0\n",
+       "76417       76417  nearestneighbor upsampling regression  bug whe...      0\n",
+       "76418       76418  cve202122880 high detected in rails523gem acti...      1\n",
+       "76419       76419  failure to save node doing 8021x autoreg jun 2...      0\n",
        "\n",
-       "[158943 rows x 3 columns]"
+       "[76420 rows x 3 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "name = \"high_vs_random\"\n",
+    "name = \"high_vs_random_min_len_1000\"\n",
     "file_name = f\"csv/clean_{name}.csv\"\n",
     "df = pd.read_csv(file_name)\n",
     "df"
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -186,28 +186,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>valueerror too many values to unpack during st...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>simplepasscodebuttons not working on ios 1131 ...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>provide details on how to proceed with setting...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>pedroborgeskirbymetatagsv210 2 vulnerabilities...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>cve201812896 medium detected in linuxlinux46 a...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>when i use thrift protocol the classes generat...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>incorrect recoloring of the background color o...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>the tiled gallerys visible columns in the edit...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>csw data source australianinstituteofmarinesci...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>core chinese characters not displaying in work...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -215,53 +215,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>158938</th>\n",
-       "      <td>support passing of idictionarystring object as...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>158939</th>\n",
-       "      <td>editor overflow menu not shown on api17 expect...</td>\n",
+       "      <th>76415</th>\n",
+       "      <td>bug sidebar statistics fail to load in appon f...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>158940</th>\n",
-       "      <td>client message cant detect virtualbox because ...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>158941</th>\n",
-       "      <td>feature gate story why do we need the feature ...</td>\n",
+       "      <th>76416</th>\n",
+       "      <td>ena consensus submissions x instituteenaassemb...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>158942</th>\n",
-       "      <td>genotype selectorfor those case that we have m...</td>\n",
+       "      <th>76417</th>\n",
+       "      <td>nearestneighbor upsampling regression  bug whe...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76418</th>\n",
+       "      <td>cve202122880 high detected in rails523gem acti...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76419</th>\n",
+       "      <td>failure to save node doing 8021x autoreg jun 2...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>158943 rows × 2 columns</p>\n",
+       "<p>76420 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               text_clean  label\n",
-       "0       valueerror too many values to unpack during st...      0\n",
-       "1       provide details on how to proceed with setting...      0\n",
-       "2       cve201812896 medium detected in linuxlinux46 a...      1\n",
-       "3       incorrect recoloring of the background color o...      1\n",
-       "4       csw data source australianinstituteofmarinesci...      0\n",
-       "...                                                   ...    ...\n",
-       "158938  support passing of idictionarystring object as...      1\n",
-       "158939  editor overflow menu not shown on api17 expect...      0\n",
-       "158940  client message cant detect virtualbox because ...      1\n",
-       "158941  feature gate story why do we need the feature ...      0\n",
-       "158942  genotype selectorfor those case that we have m...      0\n",
+       "                                              text_clean  label\n",
+       "0      simplepasscodebuttons not working on ios 1131 ...      1\n",
+       "1      pedroborgeskirbymetatagsv210 2 vulnerabilities...      1\n",
+       "2      when i use thrift protocol the classes generat...      0\n",
+       "3      the tiled gallerys visible columns in the edit...      0\n",
+       "4      core chinese characters not displaying in work...      1\n",
+       "...                                                  ...    ...\n",
+       "76415  bug sidebar statistics fail to load in appon f...      0\n",
+       "76416  ena consensus submissions x instituteenaassemb...      0\n",
+       "76417  nearestneighbor upsampling regression  bug whe...      0\n",
+       "76418  cve202122880 high detected in rails523gem acti...      1\n",
+       "76419  failure to save node doing 8021x autoreg jun 2...      0\n",
        "\n",
-       "[158943 rows x 2 columns]"
+       "[76420 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -308,11 +308,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>79563</td>\n",
+       "      <td>38265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>79380</td>\n",
+       "      <td>38155</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -321,11 +321,11 @@
       "text/plain": [
        "       count\n",
        "label       \n",
-       "1      79563\n",
-       "0      79380"
+       "1      38265\n",
+       "0      38155"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -386,20 +386,20 @@
        "DatasetDict({\n",
        "    test: Dataset({\n",
        "        features: ['text_clean', 'label', '__index_level_0__'],\n",
-       "        num_rows: 15895\n",
+       "        num_rows: 7642\n",
        "    })\n",
        "    train: Dataset({\n",
        "        features: ['text_clean', 'label', '__index_level_0__'],\n",
-       "        num_rows: 127154\n",
+       "        num_rows: 61136\n",
        "    })\n",
        "    validate: Dataset({\n",
        "        features: ['text_clean', 'label', '__index_level_0__'],\n",
-       "        num_rows: 15894\n",
+       "        num_rows: 7642\n",
        "    })\n",
        "})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,13 +431,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e3c3e0b5ea4409d860bac03b8d817ce",
+       "model_id": "09e5879ed7af4cb393118ff3f22cf7dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -451,12 +451,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6676478f3cfd4613b43039fed4653451",
+       "model_id": "e0fdc04bd49f45a394ea3382c615bf5a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/16 [00:00<?, ?ba/s]"
+       "Creating parquet from Arrow format:   0%|          | 0/8 [00:00<?, ?ba/s]"
       ]
      },
      "metadata": {},
@@ -465,7 +465,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a391595302cb4d88a8719eb42dda570f",
+       "model_id": "b77acdf62f8c4ccd9ff06f8a181de0dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -479,12 +479,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c78fc9c98794ecfb5bdf9a24b2948bc",
+       "model_id": "963d7ab317ea40be81cb83b00785cdde",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/128 [00:00<?, ?ba/s]"
+       "Creating parquet from Arrow format:   0%|          | 0/62 [00:00<?, ?ba/s]"
       ]
      },
      "metadata": {},
@@ -493,7 +493,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "585d1b211d4d484380db101415b633d1",
+       "model_id": "a219b77c52ee4d8c902d5909af795553",
        "version_major": 2,
        "version_minor": 0
       },
@@ -507,12 +507,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "978ded7bcc954bd6944a3e353d4c3bf1",
+       "model_id": "4bef219fd4c84d1faf38b67516557edd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/16 [00:00<?, ?ba/s]"
+       "Creating parquet from Arrow format:   0%|          | 0/8 [00:00<?, ?ba/s]"
       ]
      },
      "metadata": {},
@@ -521,7 +521,7 @@
    ],
    "source": [
     "# Push to Hugging Face Hub\n",
-    "ds.push_to_hub(name+\"_min_length_500\")"
+    "ds.push_to_hub(name)"
    ]
   }
  ],
